Update README.md
增加jvm参数配置部分